# talk_bot

./: .gitignore  README.md  pyproject.toml
talk_bot/: bot.py  settings.example.json
talk_bot/cogs/: error_handler.py  management.py
talk_bot/orm/: models.py
talk_bot/tasks/: sender.py
